--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "lodash": "^4.13.1",
-    "angular": "^1.5.7"
+    "angular": "^1.5.7",
+    "faker": "Faker#^3.1.0",
+    "chance": "^1.0.3"
   }
 }
